# ment-creatorV2

./: README.md  main.py  pyproject.toml
backend/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 088fbb714687_create_initial_tables.py
backend/app/: main.py
backend/app/api/dependencies/: __init__.py  auth.py  database.py  pagination.py
backend/app/api/v1/: __init__.py  api.py
backend/app/api/v1/endpoints/: __init__.py  admin.py  auth.py  deployments.py  files.py  monitoring.py  scenarios.py  simulations.py  tts.py  users.py  voice_actors.py
backend/app/core/: __init__.py  config.py  exceptions.py  middleware.py  security.py
backend/app/db/: __init__.py  base.py  init_db.py  session.py
backend/app/models/: __init__.py  audit.py  deployment.py  file.py  monitoring.py  scenario.py  tts.py  user.py  voice_actor.py
backend/app/schemas/: __init__.py  admin.py  auth.py  base.py  common.py  deployment.py  file.py  monitoring.py  scenario.py  simulation.py  tts.py  user.py  voice_actor.py
backend/app/services/: __init__.py  admin_service.py  auth_service.py  base.py  deployment_service.py  file_service.py  monitoring_service.py  scenario_service.py  simulation_service.py  tts_service.py  user_service.py  voice_service.py
backend/app/utils/: __init__.py  constants.py  helpers.py  logger.py  validators.py
backend/scripts/: check_lint_format.sh  create_admin.py  init_db.py
backend/tests/: conftest.py  test_main.py
